Fixed nav to fit on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -267,6 +267,7 @@ li {
 
     .nav {
         width: 20%;
+        font-size: smaller;
     }
 
     .left {
